<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DetailsFragment"
    android:background="#FFFFFF">


    <Button
        android:id="@+id/ing_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/ingredients"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/details_rv">


    </android.support.v7.widget.RecyclerView>


</RelativeLayout>