<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Activities.PlayerFragment">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/video_player"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="0dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="250dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/desc"
        android:textSize="21dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="0dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="300dp"
        android:fontFamily="sans-serif"
        android:text=""
        android:textSize="18dp" />

</RelativeLayout>